# betterstring

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  add_benchmark_macro.hpp  benchmarks.hpp  fixture.hpp  functions.cpp  html_boxplot.hpp  main.cpp  parse_results.txt  samples.hpp  string_view.cpp  strrfind.cpp  strrfind_char_results.txt  util.hpp
benchmark/benchmarks/: functions.hpp  parsing.hpp
benchmark/plots/: parsing_unsigned.html  strcount.html  strfirst_of.html  strfirstnof.html  strfirstof.html  strlen.html  strlen_aligned.html  strrfind.html  strrfind_aligned.html
cmake/: betterstringConfig.cmake.in  clang_tidy.cmake  compiler_warnings.cmake  enable_avx2.cmake  fuzzing.cmake  sanitizers.cmake  util.cmake
debugger/: betterstring.natstepfilter  betterstring.natvis
doc/: find_result.md  functions.md  parsing.md  safe_functions.md  string.md  string_view.md
fuzz/: CMakeLists.txt  parse.cpp  run_fuzzing.cmake  strcount_ch.cpp  strfind_str.cpp  strfindn_ch.cpp  strfirst_of.cpp  strfirstof.cpp  strlen.cpp  strrfind_ch.cpp  strrfind_str.cpp
fuzzing/: CMakeLists.txt  functions.cpp  run_fuzzing.cmake  strrfind.cpp  strrfind_ch.cpp  strrfind_str.cpp
include/: betterstring.hpp
include/betterstring/: allocators.hpp  ascii.hpp  char_traits.hpp  find_result.hpp  fixed_string.hpp  functions.hpp  parsing.hpp  safe_functions.hpp  splited_string.hpp  string.hpp  string_view.hpp  type_traits.hpp  unicode.hpp
include/betterstring/detail/: cpu_features.hpp  cpu_isa.hpp  dispatch.hpp  integer_cmps.hpp  parse_enum.hpp  parse_unsigned.hpp  preprocessor.hpp  ranges_traits.hpp  reference_wrapper.hpp  result_with_sentinel.hpp
include/betterstring/detail/multiarch/: strrfind_char_avx2.hpp  strrfind_char_default.hpp  strrfind_string_avx2.hpp  strrfind_string_default.hpp
src/: strcount_char_avx2.asm  strfind_str_avx2.asm  strfindn_char_avx2.asm  strfirst_of_avx2.asm  strfirstof_avx2.asm  strlen_avx2.asm  strrfind_char_avx2.asm
src/dispatch/: avx2.cpp  default.cpp  strrfind_char.asm  strrfind_char_avx2.cpp  strrfind_string_avx2.cpp  utils.hpp
src/multiarch/: avx2.cpp  default.cpp  dispatch.cpp  strrfind_char.asm
src/strfind_str/: cross_page_vec_needle.asm  vec_needle.asm
src/strfirst_of/: cmp_1.asm  cmp_2.asm  cmp_3.asm  cmp_4.asm  cmp_5.asm
src/strfirstof/: cmp_2.asm  cmp_4.asm  cmp_6.asm  cmp_any.asm
test/: CMakeLists.txt  allocators.cpp  ascii.cpp  char_traits.cpp  cpu_dispatch.cpp  fixed_string.cpp  functions.cpp  main.cpp  parsing.cpp  safe_functions.cpp  stacktrace.hpp  string.cpp  string_view.cpp  tools.hpp  unicode.cpp  util.hpp
test/functions/: functions.cpp  strfind.cpp
tools/: run-llvm-mca.py  view-cpu-features.py
